claude валидация пар Стабильные пары